--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -9,6 +9,7 @@
 
     <span id="breadcrumb">
       {% for item in page.breadcrumb %}
+      <span>{{item.url}}</span>
         {% if item.url %}
         <span>
           <a href="{{ site.baseurl }}{{ item.url | remove: '.html'}}">
