--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,6 +54,9 @@
   <a href="https://github.com/{{ site.github.username }}" target="_blank">
     <i class="fab fa-github"></i>
   </a>
+  <a href="https://stackoverflow.com/users/{{ site.stackoverflow.username }}" target="_blank">
+    <i class="fab fa-stack-overflow"></i>
+  </a>
   <!-- <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank"> -->
     <!-- <i class="fab fa-twitter"></i> -->
   <!-- </a> -->
